// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenLoader Snapshots Messages 1`] = `
<div
  className="sc-AykKH hsMHTL"
>
  <div
    className="sc-AykKD ggtnrM"
  >
    <div
      className="sc-AykKC jPvcjs"
    />
    <div
      className="sc-AykKE fffipx"
    />
  </div>
</div>
`;

exports[`FullScreenLoader Snapshots Multiple words 1`] = `
<div
  className="sc-AykKH hsMHTL"
>
  <div
    className="sc-AykKD ggtnrM"
  >
    <div
      className="sc-AykKC jPvcjs"
    />
    <div
      className="sc-AykKE fffipx"
    >
      <div
        className="sc-AykKG dJwxro"
      >
        hei
      </div>
    </div>
  </div>
</div>
`;

exports[`FullScreenLoader Snapshots invalid Messages 1`] = `
<div
  className="sc-AykKH hsMHTL"
>
  <div
    className="sc-AykKD ggtnrM"
  >
    <div
      className="sc-AykKC jPvcjs"
    />
    <div
      className="sc-AykKE fffipx"
    />
  </div>
</div>
`;
